# navajo

./: .gitignore  pyproject.toml  requirements.txt
src/navajo/: filtration.py  index.py  logconf.py  subcommand.py
src/navajo/server/: index.py  logconf.py
