[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "navajo"
version = "0.4.2"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
  "filetype",
  "gitpython",
  "prompt-toolkit",
  "pygments",
  "requests",
  "backoff",
  "cachetools",
  "flask",
  "numpy",
  "openai",
  "openai[datalib]",
  "parse",
  "pyjwt",
  "sseclient-py",
  "tiktoken",
  "tqdm",
  "pathspec~=0.11.1",
]

[project.scripts]
navajo = "navajo.main:main"
